--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass --watch ./src/styles/sass/main.scss:./src/styles/main.css"
+    "sass": "sass --watch ./src/styles/sass/main.scss:./src/styles/main.css --style compressed"
   },
   "eslintConfig": {
     "extends": [
